--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "cors": "^2.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.10.1"
+    "react-icons": "^4.10.1",
+    "react-router": "^6.15.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -27,6 +28,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.28",
+    "react-router-dom": "^6.15.0",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
   }
